<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"/>
    <item 
        android:id="@+id/action_enroll"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_enroll" />
    <item 
        android:id="@+id/action_view_account"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_view_account" />
    <item 
        android:id="@+id/action_log_out"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_log_out" />
</menu>